Update 8.0 OpenRewrite handling in context action support